Issue #356: Hide isAsynchronous from Interface and make isAsynchronous read only on InterfacePort